Add back tiles to index

--- a/index.html
+++ b/index.html
@@ -19,22 +19,23 @@
 
   <table>
     <tr>
-      <td>
-        <img src="img/bear.gif" id="bear1">
-      </td>
-      <td>
-        <img src="img/duck.gif" id="duck1">
-      </td>
-
+      <td><img src="img/bear.gif" id="bear1"></td>
+      <td><img src="img/duck.gif" id="duck1"></td>
     </tr>
-
     <tr>
-      <td>
-        <img src="img/duck.gif" id="duck2">
-      </td>
-      <td>
-        <img src="img/bear.gif" id="bear2">
-      </td>
+      <td><img src="img/duck.gif" id="duck2"></td>
+      <td><img src="img/bear.gif" id="bear2"></td>
+    </tr>
+  </table>
+  <table>
+    <tr>
+      <td><img src="img/back.gif" id="back1"></td>
+      <td><img src="img/back.gif" id="back2"></td>
+    </tr>
+    <tr>
+      <td><img src="img/back.gif" id="back3"></td>
+      <td><img src="img/back.gif" id="back4"></td>
+
     </tr>
   </table>
 
