--- a/index.html
+++ b/index.html
@@ -13,34 +13,28 @@
     </div>
     <p> <b>Click on two tiles at a time. If they match they will dissapear! Continue clicking until all tiles are gone.</b>
     </p>
-    <div class="container">
+
+
+      <img src="img/owl.gif" id="owl1">
+      <img src="img/owl.gif" id="owl2">
+      <img src="img/bear.gif" id="bear1">
+      <img src="img/duck.gif" id="duck1">
+      <img src="img/bear.gif" id="bear2">
+      <img src="img/cat.gif" id="cat1">
+      <img src="img/duck.gif" id="duck2">
+      <img src="img/cat.gif" id="cat2">
+
+      <img src="img/back.gif" id="back1">
+      <img src="img/back.gif" id="back2">
+      <img src="img/back.gif" id="back3">
+      <img src="img/back.gif" id="back4">
+      <img src="img/back.gif" id="back5">
+      <img src="img/back.gif" id="back6">
+      <img src="img/back.gif" id="back7">
+      <img src="img/back.gif" id="back8">
 
 
 
-  <table>
-    <tr>
-      <td><img src="img/bear.gif" id="bear1"></td>
-      <td><img src="img/duck.gif" id="duck1"></td>
-    </tr>
-    <tr>
-      <td><img src="img/duck.gif" id="duck2"></td>
-      <td><img src="img/bear.gif" id="bear2"></td>
-    </tr>
-  </table>
-  <table>
-    <tr>
-      <td><img src="img/back.gif" id="back1"></td>
-      <td><img src="img/back.gif" id="back2"></td>
-    </tr>
-    <tr>
-      <td><img src="img/back.gif" id="back3"></td>
-      <td><img src="img/back.gif" id="back4"></td>
-
-    </tr>
-  </table>
-
-
-</div>
 
   </body>
 </html>
