--- a/index.html
+++ b/index.html
@@ -24,16 +24,25 @@
       <img src="img/duck.gif" id="duck2">
       <img src="img/cat.gif" id="cat2">
 
-      <img src="img/back.gif" id="back1">
-      <img src="img/back.gif" id="back2">
-      <img src="img/back.gif" id="back3">
-      <img src="img/back.gif" id="back4">
-      <img src="img/back.gif" id="back5">
-      <img src="img/back.gif" id="back6">
-      <img src="img/back.gif" id="back7">
-      <img src="img/back.gif" id="back8">
 
 
+
+
+      <div class="card">
+          <img id="first" src="img/back.gif" alt="back of card"/>
+          <img id="second" src="img/back.gif" alt="back of card"/>
+          <img id="third" src="img/back.gif" alt="back of card"/>
+          <img id="fourth" src="img/back.gif" alt="back of card"/>
+          <img id="fifth" src="img/back.gif" alt="back of card"/>
+          <img id="sixth" src="img/back.gif" alt="back of card"/>
+          <img id="seventh" src="img/back.gif" alt="back of card"/>
+         <img id="eighth" src="img/back.gif" alt="back of card"/>
+      </div>
+
+
+    
+
+      <div id="winner">WINNER !!!</div>
 
 
   </body>
