--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <p> <b>Click on two tiles at a time. If they match they will dissapear! Continue clicking until all tiles are gone.</b>
     </p>
 
+    <div id="countdown">10</div>
+
+
       <div class="card">
         <img id="first" src="img/back.gif" alt="back of card"/>
         <img id="second" src="img/back.gif" alt="back of card"/>
@@ -29,6 +32,7 @@
         <img id="twelfth" src="img/back.gif" alt="back of card"/>
 
       </div>
+
 
       <div id="winner">WINNER !!!</div>
 
